--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
     "@notionhq/client": "^2.2.15",
-    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -34,11 +34,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/ssr": "^0.0.10",
+    "@supabase/supabase-js": "^2.39.0",
     "@tamagui/config": "^1.125.2",
     "@tamagui/core": "^1.125.2",
     "@tamagui/create-context": "^1.125.2",
@@ -49,23 +50,23 @@
     "@tamagui/themes": "^1.125.2",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.5.2",
+    "embla-carousel-react": "^8.0.0",
     "expo-constants": "^17.0.6",
     "expo-linking": "^7.0.5",
     "expo-modules-core": "^2.2.2",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-    "next-themes": "^0.4.4",
+    "lucide-react": "^0.294.0",
+    "next": "^15.1.7",
+    "next-themes": "^0.2.1",
     "notion-to-md": "^3.1.5",
     "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.48.2",
     "react-markdown": "^9.0.3",
     "react-native": "^0.77.1",
     "react-native-web": "^0.19.13",
@@ -74,24 +75,26 @@
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
-    "sonner": "^1.7.4",
-    "tailwind-merge": "^3.0.1",
+    "sonner": "^1.2.4",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tamagui": "^1.125.2",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "vaul": "^0.8.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.10.4",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "eslint": "^9",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
