--- a/package.json
+++ b/package.json
@@ -58,16 +58,18 @@
     "expo-constants": "^17.0.6",
     "expo-linking": "^7.0.5",
     "expo-modules-core": "^2.2.2",
+    "flowise-sdk": "^1.0.9",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.294.0",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "notion-to-md": "^3.1.5",
+    "openai": "^4.85.4",
     "react": "^19.0.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.48.2",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
     "react-native": "^0.77.1",
     "react-native-web": "^0.19.13",
     "react-notion-x": "^7.2.6",
@@ -94,6 +96,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   }
