--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": ["next/core-web-vitals"],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react/no-unescaped-entities": "off"
   }
 } 
