--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@hookform/resolvers": "^4.1.0",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -21,6 +23,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
@@ -59,8 +62,10 @@
     "expo-linking": "^7.0.5",
     "expo-modules-core": "^2.2.2",
     "flowise-sdk": "^1.0.9",
+    "framer-motion": "^12.4.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.294.0",
+    "motion": "^12.4.7",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "notion-to-md": "^3.1.5",
