--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@hookform/resolvers": "^4.1.0",
-    "@notionhq/client": "^2.2.15",
+    "@notionhq/client": "^2.2.16",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -87,7 +87,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tamagui": "^1.125.2",
     "vaul": "^0.8.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
