--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@hookform/resolvers": "^4.1.0",
+    "@modelcontextprotocol/server-postgres": "^0.6.2",
     "@notionhq/client": "^2.2.16",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -52,6 +53,7 @@
     "@tamagui/shorthands": "^1.125.2",
     "@tamagui/themes": "^1.125.2",
     "@types/axios": "^0.9.36",
+    "@types/pg": "^8.11.11",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -70,6 +72,7 @@
     "next-themes": "^0.2.1",
     "notion-to-md": "^3.1.5",
     "openai": "^4.85.4",
+    "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^19.0.0",
