--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^4.1.0",
+    "@modelcontextprotocol/sdk": "^1.6.1",
     "@modelcontextprotocol/server-postgres": "^0.6.2",
     "@notionhq/client": "^2.2.16",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -60,9 +63,12 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
+    "emoji-mart": "^5.6.0",
     "expo-constants": "^17.0.6",
     "expo-linking": "^7.0.5",
     "expo-modules-core": "^2.2.2",
+    "flowise-embed": "^2.1.2",
+    "flowise-embed-react": "^1.0.7",
     "flowise-sdk": "^1.0.9",
     "framer-motion": "^12.4.7",
     "input-otp": "^1.4.2",
