--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mnky-blog",
   "version": "0.1.0",
   "private": true,
+  "_comment": "Trigger lockfile update workflow",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
