fix: Improve npm install step with error handling and legacy-peer-deps fallback
- Add --legacy-peer-deps fallback for npm install
- Add npm ls check to verify installation
- Add check for package-lock.json existence before git status
- Improve error handling and debugging output

--- a/.github/workflows/update-lockfile.yml
+++ b/.github/workflows/update-lockfile.yml
@@ -27,15 +27,22 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install --legacy-peer-deps || npm install
+          npm ls --depth=0 || true
 
       - name: Check for lockfile changes
         id: check-lockfile
         run: |
-          if [ -n "$(git status --porcelain package-lock.json)" ]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
+          if [ -f "package-lock.json" ]; then
+            if [ -n "$(git status --porcelain package-lock.json)" ]; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
           else
             echo "changed=false" >> $GITHUB_OUTPUT
+            echo "Warning: package-lock.json not found after npm install"
           fi
 
       - name: Commit and push lockfile
